--- a/theonefile_verse/docker-compose.yml
+++ b/theonefile_verse/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - PORT=10101
       - DATA_DIR=/app/data
       - UPDATE_INTERVAL=24
-      - REDIS_URL=redis://redis:6379
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379
     depends_on:
       - redis
     restart: unless-stopped
@@ -18,7 +18,7 @@ services:
     image: redis:alpine
     volumes:
       - redis_data:/data
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     restart: unless-stopped
 
 volumes:
